<resources xmlns:xliff="http://schemas.android.com/tools">
    <string name="app_name">함께 운동해요</string>

    <string name="title_activity_fullscreen">함께 운동해요</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_board_list_view">BoardListView</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_profile">My Profile</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="profile">Profile</string>
    <string name="commit">Commit</string>
    <string name="cancel">Cancel</string>

    <string name="nickname">NickName</string>
    <string name="age">Age</string>
    <string name="gender">Gender</string>
    <string name="location">Location</string>
    <string name="phonenum">Phone</string>
    <string name="sports_type">Sports Type</string>
    <string name="level">Level</string>
    <string name="bulletin">Bulletin</string>
    <string name="bulletin_location">Location : %1$s</string>
    <string name="bulletin_num">Total : %1$s</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>

    <string name="title_edit">Edit</string>
    <string name="edit_cancel_message">Are you realy cancel?</string>

    <string name="title_change_profile_image">Change Title Image</string>
    <string name="profile_image_through_capture">Capture Photo</string>
    <string name="profile_image_through_select">Select Photo</string>
    <string name="crop_error">Crop was Failed</string>
    <string name="capture_error">Capture was Failed</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="more_view">more and more</string>
    <string name="title_activity_profile_manager">My Profile List</string>

    <string name="profile_sports">SPORTS : %1$s</string>
    <string name="profile_location">LOCATION : %1$s</string>
    <string name="profile_level">LEVEL : %1$s</string>

    <string name="kakaolink_host">kakaolink</string>

    <string name="badminton">배드민턴</string>
    <string name="tennis">테니스</string>
    <string name="table_tennis">탁구</string>
    <string name="soccer">축구</string>
    <string name="baseball">야구</string>
    <string name="basketball">농구</string>

    <string name="Gangnam_gu">강남구</string>
    <string name="Gangdong_gu">강동구</string>
    <string name="Gangbuk_gu">강북구</string>
    <string name="Gangseo_gu">강서구</string>
    <string name="Gwanak_gu">관악구</string>
    <string name="Gwangjin_gu">광진구</string>
    <string name="Guro_gu">구로구</string>
    <string name="Geumcheon_gu">금천구</string>
    <string name="Nowon_gu">노원구</string>
    <string name="Dobong_gu">도봉구</string>
    <string name="Dongdaemun_gu">동대문구</string>
    <string name="Dongjag_gu">동작구</string>
    <string name="Mapo_gu">마포구</string>
    <string name="Seodaemun_gu">서대문구</string>
    <string name="Seocho_gu">서초구</string>
    <string name="Seongdong_gu">성동구</string>
    <string name="Seongbuk_gu">성북구</string>
    <string name="Songpa_gu">송파구</string>
    <string name="Yangcheon_gu">양천구</string>
    <string name="Yeongdeungpo_gu">영등포구</string>
    <string name="Yongsan_gu">용산구</string>
    <string name="Eunpyeong_gu">은평구</string>
    <string name="Jongno_gu">종로구</string>
    <string name="Jung_gu">중구</string>
    <string name="Jungnang_gu">중랑구</string>

    <string name="in10">10대</string>
    <string name="in20">20대</string>
    <string name="in30">30대</string>
    <string name="in40">40대</string>
    <string name="in50">50대</string>
    <string name="in60">60대</string>
    <string name="in70">70대</string>
    <string name="in80">80대</string>

    <string name="lv1">완전초보</string>
    <string name="lv2">초보바로위</string>
    <string name="lv3">중간</string>
    <string name="lv4">중간바로위</string>
    <string name="lv5">잘함</string>
    <string name="lv6">완전잘함</string>

    <string name="Male">남자</string>
    <string name="Female">여자</string>
    <string name="buddy_alarm_switch">Buddy Alarm On/Off</string>
    <string name="chat_alarm_switch">Chating Alarm On/Off</string>

        <string name="buddyview">동네친구 보러가기</string>

    <string name="sub_location_title">%1$s 지역 모임</string>

    <string name="delete">delete</string>

    <string name="bulletin_tip">아래 새글 작성을 통해 친구를 모집하세요</string>

</resources>
