<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:layout_collapseMode="pin"
        app:title="@string/title_activity_profile"
        app:navigationIcon="?attr/homeAsUpIndicator"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/ivProfile_image"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:src="@drawable/default_user"
            app:civ_border_width="2dp"
            app:civ_border_color="#FF000000"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="bottom">
            <TextView android:layout_width="74dip"
                      android:layout_height="wrap_content"
                      android:text="@string/nickname"
                />
            <EditText android:id="@+id/etNickName"
                      android:layout_width="200dip"
                      android:layout_height="wrap_content"
                />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView android:layout_width="34dp"
                  android:layout_height="wrap_content"
                  android:text="@string/age"/>
        <fr.ganfra.materialspinner.MaterialSpinner
            android:id="@+id/spAge"
            android:layout_width="150dip"
            android:layout_height="wrap_content"
            app:ms_arrowColor="#0000FF"
            app:ms_arrowSize="16dp"
            app:ms_floatingLabelColor="#00FF00"
            app:ms_multiline="true"
            android:entries="@array/age" />

        <Space
            android:layout_width="30dip"
            android:layout_height="wrap_content"
            />

        <TextView android:layout_width="54dp"
                  android:layout_height="wrap_content"
                  android:text="@string/gender"/>
        <fr.ganfra.materialspinner.MaterialSpinner
            android:id="@+id/spGender"
            android:layout_width="100dip"
            android:layout_height="wrap_content"
            app:ms_arrowColor="#0000FF"
            app:ms_arrowSize="16dp"
            app:ms_floatingLabelColor="#00FF00"
            app:ms_multiline="true"
            android:entries="@array/gender" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView android:layout_width="74dp"
                  android:layout_height="wrap_content"
                  android:text="@string/location"/>
        <fr.ganfra.materialspinner.MaterialSpinner
            android:id="@+id/spLocation"
            android:layout_width="200dip"
            android:layout_height="wrap_content"
            app:ms_arrowColor="#0000FF"
            app:ms_arrowSize="16dp"
            app:ms_floatingLabelColor="#00FF00"
            android:entries="@array/location"
            app:ms_multiline="true"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView android:layout_width="74dp"
                  android:layout_height="wrap_content"
                  android:text="@string/phonenum"/>
        <EditText android:id="@+id/etPhoneNum"
                  android:layout_width="200dip"
                  android:layout_height="wrap_content"
                  android:inputType="numberSigned"
                  android:digits="0123456789-"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/sports_type"/>
        <fr.ganfra.materialspinner.MaterialSpinner
            android:id="@+id/spSportsType"
            android:layout_width="200dip"
            android:layout_height="wrap_content"
            app:ms_arrowColor="#0000FF"
            app:ms_arrowSize="16dp"
            android:enabled="false"
            app:ms_floatingLabelColor="#00FF00"
            app:ms_multiline="true"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView android:layout_width="74dp"
                  android:layout_height="wrap_content"
                  android:text="@string/level"/>
        <fr.ganfra.materialspinner.MaterialSpinner
            android:id="@+id/spLevel"
            android:layout_width="200dip"
            android:layout_height="wrap_content"
            app:ms_arrowColor="#0000FF"
            app:ms_arrowSize="16dp"
            app:ms_floatingLabelColor="#00FF00"
            android:entries="@array/level"
            app:ms_multiline="true"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <Button
            android:id="@+id/bt_commit"
            android:text="@string/commit"
            android:layout_width="0dip"
            android:layout_weight="5"
            android:layout_height="wrap_content" />
        <View
            android:layout_width="0dip"
            android:layout_weight="1"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/bt_cancel"
            android:text="@string/cancel"
            android:layout_width="0dip"
            android:layout_weight="5"
            android:layout_height="wrap_content" />
    </LinearLayout>


</LinearLayout>
