<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        >
    <data>
        <import type="android.view.View"/>
        <import type="java.lang.String"/>
        <variable
            name="viewModel"
            type="com.iron.dragon.sportstogether.data.viewmodel.BulletinListViewModel"/>
    </data>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    tools:context="com.iron.dragon.sportstogether.ui.activity.BulletinListActivity"
    >
    <android.support.v4.widget.SwipeRefreshLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:onRefreshListener="@{viewModel.onRefreshListener}"
        app:refreshing="@{viewModel.swipeRefreshViewRefreshing}"
        app:enabled='@{viewModel.topSheetEnabled &amp;&amp; !viewModel.bottomSheetState.equals("expanded")}'
        android:id="@+id/swipe_layout">
    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        >
        <android.support.design.widget.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:fitsSystemWindows="true"
            android:addOnOffsetChangedListener="@{viewModel.OffsetCahngedListener}"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <android.support.design.widget.CollapsingToolbarLayout
                android:id="@+id/collapsingToolbarLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                app:contentScrim="?attr/colorPrimary"
                app:expandedTitleMarginEnd="64dp"
                app:expandedTitleMarginStart="48dp"
        	    app:title="@{viewModel.Title}"
                app:layout_scrollFlags="scroll|exitUntilCollapsed">

                <ImageView
                    android:id="@+id/ivBulletin"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fitsSystemWindows="true"
                    app:layout_collapseMode="parallax"
                    app:layout_collapseParallaxMultiplier="0.7"
                    app:imgRes="@{viewModel.SportsMainImage}"
                    android:scaleType="fitXY"/>
                <android.support.v7.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:layout_collapseMode="pin"
                    app:title="@string/bulletin"
                    app:navigationIcon="?attr/homeAsUpIndicator"
                    app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
                <TextView
                    style="@style/text_drop_shadow_grey_dt2_sz2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:paddingStart="10dip"
                    android:textColor="@android:color/white"
                    android:text="@{@string/sub_location_title(viewModel.Location)}"
                    android:textSize="40dp"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="100dip"
                    >
                    <View
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tvLocation"
                            android:text="@{viewModel.Location}"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textStyle="bold"
                            android:textColor="@android:color/black"/>
                        <TextView
                            android:id="@+id/tvTotalNum"
                            android:text="@{viewModel.numberOfUsersLoggedIn}"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textStyle="bold"
                            android:textColor="@android:color/black"/>

                        <Button
                            android:text="@string/buddyview"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textStyle="bold"
                            android:textColor="@android:color/black"
                            android:background="@drawable/btn_selector_for_buddylist"
                            android:paddingLeft="5dp"
                            android:paddingRight="5dp"
                            android:onClick="@{(view) -> viewModel.onClickToBuddyListView(view)}"/>
                    </LinearLayout>
                </LinearLayout>

            </android.support.design.widget.CollapsingToolbarLayout>

        </android.support.design.widget.AppBarLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <TextView
            android:id="@+id/tv_bulletin_tip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:textStyle="bold"
            android:text="@string/bulletin_tip"
            android:background="@color/md_orange_A400"
            android:textColor="@android:color/white"
            android:padding="7dp"/>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/board_recyclerviewer"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/tv_bulletin_tip"
                >
            </android.support.v7.widget.RecyclerView>
        </RelativeLayout>
        <include  android:id="@+id/commentLayout" layout="@layout/bulletin_content_bottom_sheet" bind:viewModel="@{viewModel}"
            />
        <com.github.rahatarmanahmed.cpv.CircularProgressView
            android:id="@+id/progress_view"
            android:layout_gravity="center"
            android:visibility="@{viewModel.loading ? View.VISIBLE:View.INVISIBLE, default=gone}"
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:cpv_animAutostart="true"
            app:cpv_indeterminate="true" />
        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:useCompatPadding="true"
            android:layout_margin="16dp"
            android:layout_gravity="bottom|end"
            android:visibility='@{viewModel.bottomSheetState.equals("expanded") ? View.GONE : View.VISIBLE}'
            android:onClick="@{viewModel::onClickFab}"
            android:src="@drawable/pencil" />
    </android.support.design.widget.CoordinatorLayout>
    </android.support.v4.widget.SwipeRefreshLayout>

    <ImageView
        android:id="@+id/expanded_image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="invisible"
         />
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/container"></FrameLayout>
</LinearLayout>
</layout>